@@ -1,3 +1,7 @@
+2008-11-14  Gabor Csardi  <csardi@szaffi>
+
+	* src/bipartite.c (igraph_is_bipartite) : added
+
 2008-11-10  Gabor Csardi  <csardi@szaffi>
 
 	* src/structural_properties.c (igraph_shortest_path_johnson) : 
